updating readme. more CRUD endpoints. refactor state to status

--- a/views/index.haml
+++ b/views/index.haml
@@ -12,18 +12,16 @@
                 %li 
                     %a{:href => "/h/localhost"} localhost (this server)
                 %li
-                    %a{:href => "/h/localhost/s"} localhost services
-                %li
-                    %a{:href => "/h/localhost/s/noah"} localhost noah service
+                    %a{:href => "/h/localhost/noah"} localhost noah service
         #header
             %h2 Services
             %ul
                 %li 
                     %a{:href => "/s/"} All registered Services
-                %li 
-                    %a{:href => "/s/noah/h/localhost"} localhost noah service
                 %li
                     %a{:href => "/s/http"} All hosts providing 'http'
+                %li 
+                    %a{:href => "/s/noah/localhost"} localhost noah service
         #header
             %h2 Applications
             %ul
