Rack::Test tests started

--- a/views/500.erb
+++ b/views/500.erb
@@ -1,4 +1,1 @@
-{
-  "result":"failure",
-  "error_message":"<%= request.env['sinatra.error'].message %>"
-}  
+{"result":"failure","error_message":"<%= request.env['sinatra.error'].message %>"}
