Fixes for jruby/warbler. Hardcode some deps

--- a/views/index.haml
+++ b/views/index.haml
@@ -8,42 +8,42 @@
             %h2 Hosts
             %ul
                 %li 
-                    %a{:href => "/h/"} All registered Hosts
+                    %a{:href => "h/"} All registered Hosts
                 %li 
-                    %a{:href => "/h/localhost"} localhost (this server)
+                    %a{:href => "h/localhost"} localhost (this server)
                 %li
-                    %a{:href => "/h/localhost/noah"} localhost noah service
+                    %a{:href => "h/localhost/noah"} localhost noah service
         #header
             %h2 Services
             %ul
                 %li 
-                    %a{:href => "/s/"} All registered Services
+                    %a{:href => "s/"} All registered Services
                 %li
-                    %a{:href => "/s/http"} All hosts providing 'http'
+                    %a{:href => "s/http"} All hosts providing 'http'
                 %li 
-                    %a{:href => "/s/noah/localhost"} localhost noah service
+                    %a{:href => "s/noah/localhost"} localhost noah service
         #header
             %h2 Applications
             %ul
                 %li
-                    %a{:href => "/a/"} All registered Applications
+                    %a{:href => "a/"} All registered Applications
                 %li
-                    %a{:href => "/a/noah"} Noah Application entry
+                    %a{:href => "a/noah"} Noah Application entry
                 %li
-                    %a{:href => "/a/noah/redis"} Noah Redis configuration entry
+                    %a{:href => "a/noah/redis"} Noah Redis configuration entry
         #header
             %h2 Configurations
             %ul
                 %li
-                    %a{:href => "/c/"} All registered Configurations
+                    %a{:href => "c/"} All registered Configurations
                 %li
-                    %a{:href => "/c/noah"} Noah Configuration entry
+                    %a{:href => "c/noah"} Noah Configuration entry
                 %li
-                    %a{:href => "/c/myrailsapp1"} myrailsapp1 Configuration entry
+                    %a{:href => "c/myrailsapp1"} myrailsapp1 Configuration entry
                 %li
-                    %a{:href => "/c/myrestapp1"} myrestapp1 Configuration entry
+                    %a{:href => "c/myrestapp1"} myrestapp1 Configuration entry
                 %li
-                    %a{:href => "/c/myrailsapp1/database.yml"} database.yml file for myrailsapp1 (should return the proper content-type)
+                    %a{:href => "c/myrailsapp1/database.yml"} database.yml file for myrailsapp1 (should return the proper content-type)
                 %li
-                    %a{:href => "/c/myrestapp1/config.json"} config.json file for myrestapp1
+                    %a{:href => "c/myrestapp1/config.json"} config.json file for myrestapp1
 
