cleanup. specs finished. gemtest

--- a/views/index.haml
+++ b/views/index.haml
@@ -4,6 +4,12 @@
 
         #header
             %h1 Sample links
+            %h2 System Information
+            %ul
+                %li
+                    Noah Version: #{locals[:noah_version]}
+                %li
+                    Redis URL: #{locals[:redis_url]}
         #header
             %h2 Hosts
             %ul
