--- a/views/index.haml
+++ b/views/index.haml
@@ -14,42 +14,42 @@
             %h2 Hosts
             %ul
                 %li 
-                    %a{:href => "h/"} All registered Hosts
+                    %a{:href => "hosts/"} All registered Hosts
                 %li 
-                    %a{:href => "h/localhost"} localhost (this server)
+                    %a{:href => "hosts/localhost"} localhost (this server)
                 %li
-                    %a{:href => "h/localhost/noah"} localhost noah service
+                    %a{:href => "hosts/localhost/noah"} localhost noah service
         #header
             %h2 Services
             %ul
                 %li 
-                    %a{:href => "s/"} All registered Services
+                    %a{:href => "services/"} All registered Services
                 %li
-                    %a{:href => "s/http"} All hosts providing 'http'
+                    %a{:href => "services/http"} All hosts providing 'http'
                 %li 
-                    %a{:href => "s/noah/localhost"} localhost noah service
+                    %a{:href => "services/noah/localhost"} localhost noah service
         #header
             %h2 Applications
             %ul
                 %li
-                    %a{:href => "a/"} All registered Applications
+                    %a{:href => "applications/"} All registered Applications
                 %li
-                    %a{:href => "a/noah"} Noah Application entry
+                    %a{:href => "applications/noah"} Noah Application entry
                 %li
-                    %a{:href => "a/noah/redis"} Noah Redis configuration entry
+                    %a{:href => "applications/noah/redis"} Noah Redis configuration entry
         #header
             %h2 Configurations
             %ul
                 %li
-                    %a{:href => "c/"} All registered Configurations
+                    %a{:href => "configurations/"} All registered Configurations
                 %li
-                    %a{:href => "c/noah"} Noah Configuration entry
+                    %a{:href => "configurations/noah"} Noah Configuration entry
                 %li
-                    %a{:href => "c/myrailsapp1"} myrailsapp1 Configuration entry
+                    %a{:href => "configurations/myrailsapp1"} myrailsapp1 Configuration entry
                 %li
-                    %a{:href => "c/myrestapp1"} myrestapp1 Configuration entry
+                    %a{:href => "configurations/myrestapp1"} myrestapp1 Configuration entry
                 %li
-                    %a{:href => "c/myrailsapp1/database.yml"} database.yml file for myrailsapp1 (should return the proper content-type)
+                    %a{:href => "configurations/myrailsapp1/database.yml"} database.yml file for myrailsapp1 (should return the proper content-type)
                 %li
-                    %a{:href => "c/myrestapp1/config.json"} config.json file for myrestapp1
+                    %a{:href => "configurations/myrestapp1/config.json"} config.json file for myrestapp1
 
