Updating sample data script. Tagging work

--- a/views/index.haml
+++ b/views/index.haml
@@ -52,4 +52,10 @@
                     %a{:href => "configurations/myrailsapp1/database.yml"} database.yml file for myrailsapp1 (should return the proper content-type)
                 %li
                     %a{:href => "configurations/myrestapp1/config.json"} config.json file for myrestapp1
-
+        #header
+            %h2 Links
+            %ul
+                %li
+                    %a{:href => "my_sample_organization"} Sample Organization Link
+                %li
+                    %a{:href => "my_sample_organization/hosts"} Sample Organization Link - Hosts
