changing infobox on index

--- a/views/index.haml
+++ b/views/index.haml
@@ -9,7 +9,7 @@
                 %li
                     Noah Version: #{locals[:noah_version]}
                 %li
-                    Redis URL: #{locals[:redis_url]}
+                    Redis Version: #{locals[:redis_version]}
         #header
             %h2 Hosts
             %ul
