--- a/views/index.json.erb
+++ b/views/index.json.erb
@@ -1,10 +1,10 @@
 {
-  "redis_verion":"<%= locals[:redis_version] %>",
+  "redis_version":"<%= locals[:redis_version] %>",
   "noah_version":"<%= locals[:noah_version] %>",
   "resources":{
-    "hosts":{"link":"<%= request.url %>hosts"}
-    "services":{"link":"<%= request.url %>services"}
-    "applications":{"link":"<%= request.url %>applications"}
+    "hosts":{"link":"<%= request.url %>hosts"},
+    "services":{"link":"<%= request.url %>services"},
+    "applications":{"link":"<%= request.url %>applications"},
     "configurations":{"link":"<%= request.url %>configurations"}
   }
 }
